--- a/src/client/stylesheets/_scaffolding.scss
+++ b/src/client/stylesheets/_scaffolding.scss
@@ -1,3 +1,10 @@
 .center {
   text-align: center;
 }
+
+@media (min-width: $screen-md-min) {
+  .content {
+    margin: auto;
+    max-width: 1000px;
+  }
+}
