--- a/src/client/templates/_font-matcher.html
+++ b/src/client/templates/_font-matcher.html
@@ -11,11 +11,11 @@
   </div>
 
   <div class="item item-body" id="fontcard">
-    <h1 class="font-heading" style="{{fontHeading}}" contenteditable>
+    <h1 class="font-heading" style="{{fontHeading}}" contenteditable spellcheck="false">
       Grumpy wizards make toxic brew for the evil Queen and Jack.
     </h1>
 
-    <p class="font-body" style="{{fontBody}}" contenteditable>
+    <p class="font-body" style="{{fontBody}}" contenteditable spellcheck="false">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu urna eu turpis cursus egestas. Nunc ut velit vel justo imperdiet accumsan eget nec nunc. Aenean ut dapibus arcu, eget auctor purus. In ac ipsum at sapien dictum dignissim et eu est. Praesent a finibus nulla. Fusce convallis sed magna ut tristique. Donec ornare, odio quis iaculis consequat, enim urna suscipit sem, et cursus diam odio nec libero. Pellentesque rutrum enim eget maximus maximus. Integer sodales velit sed placerat tempor. Aenean consectetur condimentum risus ac tempus. Etiam semper orci eget ultricies fringilla. Nam at velit a eros ultricies blandit sed eu felis. In accumsan ligula diam, ac lacinia nisi tincidunt ac. Nulla ullamcorper urna quam, vitae dapibus libero tempus vitae. Praesent at fermentum nisl. Phasellus feugiat interdum dictum.
     </p>
   </div>
@@ -41,6 +41,10 @@
 
       </a>
     {{/if}}
+    {{! Details: }}
+    <a class="tab-item" href="#" data-action="details" data-ion-modal="_fontDetails">
+      <i class="icon ion-information-circled"></i> Details
+    </a>
     {{! New: }}
     <a class="tab-item" href="#" data-action="new-font-set">
       <i class="icon ion-refresh"></i> New Pair
