--- a/src/client/templates/_sign-in.html
+++ b/src/client/templates/_sign-in.html
@@ -2,7 +2,12 @@
   {{#ionModal title="Sign In"}}
     <div class="padding text-center sign-in-modal">
       <p>
-        <strong>Sign in so you can favorite posts and see which font combinations you liked!</strong>
+        <strong>When you sign in, you can:</strong>
+        <ol class="numbered">
+          <li>Favorite font combinations</li>
+          <li>See your previously favorited fonts</li>
+          <li>Save your votes!</li>
+        </ol>
       </p>
       <p>
         <button data-action="sign-in" class="button button-positive sign-in-button">
