--- a/src/client/templates/home.html
+++ b/src/client/templates/home.html
@@ -26,9 +26,11 @@
       <button class="button button-clear" data-ion-modal="_about">
         {{> ionIcon icon='information-circled'}} About
       </button>
-      <button class="button button-clear" data-ion-modal="_favorites">
-        {{> ionIcon icon='android-star'}} Your Favorites
-      </button>
+      {{#if currentUser}}
+        <button class="button button-clear" data-ion-modal="_favorites">
+          {{> ionIcon icon='android-star'}} Your Favorites
+        </button>
+      {{/if}}
     {{/ionFooterBar}}
   {{/ionView}}
 </template>
