--- a/src/client/templates/_favorites.html
+++ b/src/client/templates/_favorites.html
@@ -1,6 +1,6 @@
 <template name="_favorites">
   {{#ionModal title="Your Favorites"}}
-    <div class="card padding">
+    <div id="favorite-list" class="card padding">
       {{#ionList}}
         {{#if noFavorites}}
           <div class="item item-text-wrap">
