--- a/src/client/stylesheets/_title.scss
+++ b/src/client/stylesheets/_title.scss
@@ -3,7 +3,8 @@
 // =====
 
 .fm-first {
-  font-family: 'Homemade Apple', serif;
+  font-family: 'Satisfy', serif;
+  font-size: 20px;
 }
 
 .fm-last {
