fix font combos.

--- a/src/client/templates/top-rated.html
+++ b/src/client/templates/top-rated.html
@@ -26,11 +26,11 @@
       {{#ionList}}
         {{#each topRatedFonts}}
           <div class="item item-text-wrap item-button-right">
-            <h3 style="font-family: '{{fontHeading.name}}'">
-              {{fontHeading.name}}
+            <h3 style="font-family: '{{heading.name}}'">
+              {{heading.name}}
             </h3>
-            <p style="font-family: '{{fontBody.name}}'">
-              {{fontBody.name}}
+            <p style="font-family: '{{body.name}}'">
+              {{body.name}}
             </p>
 
             <button class="button" data-action="navigate">
