--- a/src/client/templates/home.html
+++ b/src/client/templates/home.html
@@ -8,7 +8,10 @@
           &nbsp;
           <span class="fm-last">Matcher</span>
         </h1>
-        <p class="detail">Find new font combinations!</p>
+        <p class="detail">
+          Find new font combinations!<br/><br/>
+          We pair two random fonts for you to look at and see whether you like them or not!
+        </p>
       </div>
 
       <div class="list card max-width-xs">
