top rated fonts sorting, vote numbers.

--- a/src/client/templates/top-rated.html
+++ b/src/client/templates/top-rated.html
@@ -25,7 +25,8 @@
     {{#ionContent class="padding"}}
       {{#ionList}}
         {{#each topRatedFonts}}
-          <div class="item item-text-wrap item-button-right">
+          <div class="item item-text-wrap item-button-right item-icon-left" style="">
+            <i class="icon">{{votes}}</i>
             <h3 style="font-family: '{{heading.name}}'">
               {{heading.name}}
             </h3>
