--- a/src/client/stylesheets/_hero.scss
+++ b/src/client/stylesheets/_hero.scss
@@ -4,6 +4,7 @@
   min-height: 40vh;
   padding: 40px 0px;
   text-align: center;
+  text-shadow: 0 0 10px rgba(0,0,100, 0.8);
 
   .hero-image {
     background-image: url(/images/splash-background.png);
