--- a/src/client/stylesheets/_hero.scss
+++ b/src/client/stylesheets/_hero.scss
@@ -4,9 +4,10 @@
   min-height: 40vh;
   padding: 40px 0px;
   text-align: center;
-  text-shadow: 0 0 10px rgba(0,0,100, 0.8);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
 
   .hero-image {
+    background-color: #4BA1F5;
     background-image: url(/images/splash-background.png);
     background-position: center;
     background-size: cover;
